--- a/_posts/2020-04-04-jeongdo.md
+++ b/_posts/2020-04-04-jeongdo.md
@@ -25,15 +25,13 @@ paginate: true
 
 동아쏘시오그룹의 깨끗한 경영 이미지를 위해 구축한 홈페이지였으며, 당시 그룹의 사회적 이슈로 인해 급하게 진행된 프로젝트입니다.
 부족한 인원사항을 고려하여 저 혼자 단독으로 진행하고 마무리하게 되었습니다.
-워드프레스로 진행하였고 기획부터 디자인, 퍼블리싱까지 저의 손이 닿지 않는 곳이 없었습니다.
-게시판 및 메일보내기 기능은 워드프레스 플러그인으로 매꾸어 사용자가 사용하기에 불편함이 없도록 구축했습니다.
 
 <a href="https://gamasot.dongasocio.com/" target="_blank">https://gamasot.dongasocio.com/</a>
 
 
-> 아벤종합건설 홈페이지 리뉴얼을 통하여 사용자의 Mobile에서도 쉽고 빠르게 접근을 하기 위해 반응형으로 구축을 했습니다.
+> 워드프레스로 진행하였고 **기획부터 디자인, 퍼블리싱**까지 저의 손이 닿지 않는 곳이 없었습니다.
 
-홈페이지 리뉴얼을 통해 아벤종합건설은 **PC, Mobile을 지원**을하며 사용자의 문의사항을 빠르게 접수 받을 수 있게 되었습니다.
+게시판 및 메일보내기 기능은 워드프레스 플러그인으로 매꾸어 사용자가 사용하기에 불편함이 없도록 구축했습니다.
 
 
 <!--page-->
