--- a/_posts/2020-04-04-jeongdo.md
+++ b/_posts/2020-04-04-jeongdo.md
@@ -38,7 +38,7 @@ paginate: true
 
 ## Information
 
-아벤종합건설 홈페이지 구축에 대한 간략한 소개 입니다.
+정도경영(鼎道經營)-GAMASOT 홈페이지 구축에 대한 간략한 소개 입니다.
 
 - **프로젝트명 :** 아벤종합건설 홈페이지 리뉴얼 구축
 - **참여인원 :** 3 [디자이너 1 / 퍼블리셔 1 / 개발자 1]
