--- a/_posts/2020-04-04-jeongdo.md
+++ b/_posts/2020-04-04-jeongdo.md
@@ -31,7 +31,7 @@ paginate: true
 
 > 워드프레스로 진행하였고 **기획부터 디자인, 퍼블리싱**까지 저의 손이 닿지 않는 곳이 없었습니다.
 
-게시판 및 메일보내기 기능은 워드프레스 플러그인으로 매꾸어 사용자가 사용하기에 불편함이 없도록 구축했습니다.
+게시판 및 메일보내기 기능은 워드프레스 플러그인으로 구성하여 관리자 및 사용자가 사용하기에 불편함이 없도록 구축했습니다.
 
 
 <!--page-->
@@ -40,40 +40,34 @@ paginate: true
 
 정도경영(鼎道經營)-GAMASOT 홈페이지 구축에 대한 간략한 소개 입니다.
 
-- **프로젝트명 :** 아벤종합건설 홈페이지 리뉴얼 구축
-- **참여인원 :** 3 [디자이너 1 / 퍼블리셔 1 / 개발자 1]
-- **기 간 :** 2020.12 ~ 2021.03 
-- **해당 포지션 :** Plan, Web Design
-- **Device :** PC, Mobile
-- **공헌도 :** 70%
-- **Program :** Adobe Photoshop, Adobe Illustrator, Figma
+- **프로젝트명 :** 동아쏘시오그룹 '정도경영(鼎道經營)-GAMASOT' 홈페이지 구축
+- **참여인원 :** 2 [디자이너&퍼블리싱 1]
+- **기 간 :** 2019.12 ~ 2020.04 
+- **해당 포지션 :** Plan, Web Design, Publising
+- **Device :** PC
+- **공헌도 :** 100%
+- **Program :** Adobe Photoshop, Adobe Illustrator, HTML, CSS, Wordpress
 
 
 <!--page-->
 
 ## Images
 
-아벤종합건설 홈페이지 이미지입니다.<br>
-Main / Sub-About / Sub-건축공사업 / Sub-건축공사업-상세보기 Sub-전문인력 / Sub-Contact
+정도경영(鼎道經營)-GAMASOT 홈페이지 이미지입니다.<br>
+Main / Sub-정도경영 VISION / Sub-동아 정도경영 소개 / Sub-제보처리 시스템
 
 <section class="quotes">
   <div class="bubble">
-    <img src="/assets/img/slide/aben01.jpg" />
+    <img src="/assets/img/slide/gamasot01.jpg" />
   </div>
   <div class="bubble">
-    <img src="/assets/img/slide/aben02.jpg" /> 
+    <img src="/assets/img/slide/gamasot02.jpg" /> 
   </div>
   <div class="bubble">
-    <img src="/assets/img/slide/aben03.jpg" /> 
+    <img src="/assets/img/slide/gamasot03.jpg" /> 
   </div>
   <div class="bubble">
-    <img src="/assets/img/slide/aben04.jpg" /> 
-  </div>
-  <div class="bubble">
-    <img src="/assets/img/slide/aben05.jpg" /> 
-  </div>
-  <div class="bubble">
-    <img src="/assets/img/slide/aben06.jpg" /> 
+    <img src="/assets/img/slide/gamasot04.jpg" /> 
   </div>
 </section>
 
