--- a/_posts/2019-11-06-kidkuck.md
+++ b/_posts/2019-11-06-kidkuck.md
@@ -23,7 +23,7 @@ paginate: true
 
 DA인포메이션에서 무료 배포 성장기록 App을 만들었습니다.
 
-'KID키득'은 KID의 아이라는 영어와 키를 득(得)한다는 의미입니다. 그리고 자녀의 성장주사 투약기록, 성장기록 관리 및 분석까지 할 수 있는 App입니다
+'KID키득'은 KID의 아이라는 영어와 키를 득(得)한다는 의미입니다. 그리고 자녀의 성장주사 투약기록, 성장기록 관리 및 분석까지 할 수 있는 App입니다.
 
 <a href="https://play.google.com/store/apps/details?id=com.vue.dainformation.kidkiduc" target="_blank">https://play.google.com/store/apps/details?id=com.vue.dainformation.kidkiduc</a>
 
