--- a/_posts/2019-06-07-zarada.md
+++ b/_posts/2019-06-07-zarada.md
@@ -32,7 +32,7 @@ paginate: true
 
 
 사내 자발적인 참여를 통해 진행된 프로젝트로써 타팀과의 협업을 한 프로젝트입니다.
-저에게는 App구축 프로젝트가 처음으로써 다양하고 몰랐던 사용자의 불편사항을 고려해보는 좋은 경험이었습니다.
+타팀과의 협업 프로젝트가 처음으로써 다양하고 몰랐던 사용자의 불편사항을 고려해보는 좋은 경험이었습니다.
 
 
 <!--page-->
