--- a/_posts/2018-09-03-bacchusd.md
+++ b/_posts/2018-09-03-bacchusd.md
@@ -1,7 +1,7 @@
 ---
 date: 2018-09-11 12:00:00
 layout: post
-title: 동아제약 박카스
+title: 박카스
 subtitle: 홈페이지 반응형 리뉴얼 구축
 description: 동아제약 대표 브랜드 박카스 브랜드 홈페이지 리뉴얼을 진행했었습니다.
 image: https://res.cloudinary.com/dm7h7e8xj/image/upload/v1559824822/theme15_oqsl4z.jpg
