--- a/_posts/2019-06-07-zarada.md
+++ b/_posts/2019-06-07-zarada.md
@@ -1,14 +1,14 @@
 ---
 date: 2019-06-12 12:26:40
 layout: post
-title: 동아ST 성장기록 App
+title: ZARADA
 subtitle: App 구축
 description: 동아ST 전문의약품인 그로트로핀을 투약하는 환우의 부모를 위한 App입니다.
 image: https://res.cloudinary.com/dm7h7e8xj/image/upload/v1559821648/theme1_eoyjtl.jpg
 optimized_image: https://res.cloudinary.com/dm7h7e8xj/image/upload/c_scale,w_380/v1559821648/theme1_eoyjtl.jpg
 category: app
 tags:
-  - Dong-A Socio Group
+  - Dong-A ST
   - app
   - design
   - mobile
