--- a/_posts/2019-11-06-kidkuck.md
+++ b/_posts/2019-11-06-kidkuck.md
@@ -1,7 +1,7 @@
 ---
 date: 2019-11-21 12:26:40
 layout: post
-title: DA인포메이션 성장기록 App
+title: Kid키득
 subtitle: App 구축
 description: DA인포메이션에서 무료 배포 성장기록 App을 만들었습니다.
 image: https://res.cloudinary.com/dm7h7e8xj/image/upload/v1559822137/theme11_vei7iw.jpg
