--- a/_posts/2020-04-04-jeongdo.md
+++ b/_posts/2020-04-04-jeongdo.md
@@ -1,7 +1,7 @@
 ---
 date: 2020-04-04 12:26:40
 layout: post
-title: 동아쏘시오그룹 정도경영 GAMASOT
+title: 정도경영 GAMASOT
 subtitle: 홈페이지 PC 구축
 description: 동아쏘시오그룹의 깨끗한 경영 이미지를 보여주고자 홈페이지를 구축하게 되었습니다.
 image: https://res.cloudinary.com/dm7h7e8xj/image/upload/c_scale,w_760/v1506079212/jekflix-capa_vfhuzh.png
