대한결핵협회 포스트 업로드

--- a/_posts/2019-06-07-zarada.md
+++ b/_posts/2019-06-07-zarada.md
@@ -45,7 +45,7 @@ ZARADA App 구축에 대한 간략한 소개 입니다.
 - **참여인원 :** 6 [디자이너 1 / 퍼블리셔 1 / 개발자 4]
 - **기 간 :** 2019.02 ~ 2019.06
 - **해당 포지션 :** Plan, App Design 
-- **Device :** Mobile
+- **Device :** Mobile, App
 - **공헌도 :** 60%
 - **Program :** Adobe Photoshop, Adobe Illustrator
 
