--- a/_posts/2019-11-06-kidkuck.md
+++ b/_posts/2019-11-06-kidkuck.md
@@ -44,7 +44,7 @@ KID키득 App 구축에 대한 간략한 소개 입니다.
 - **참여인원 :** 5 [디자이너 1 / 퍼블리셔 1 / 개발자 3]
 - **기 간 :** 2019.06 ~ 2019.11
 - **해당 포지션 :** Plan, App Design 
-- **Device :** Mobile
+- **Device :** Mobile, App
 - **공헌도 :** 60%
 - **Program :** Adobe Photoshop, Adobe Illustrator
 
