유방갑상선 브로셔 포스트 업로드

--- a/_posts/2017-06-10-share-me.md
+++ b/_posts/2017-06-10-share-me.md
@@ -6,7 +6,7 @@ subtitle: App 구축
 description: 동아쏘시오그룹과 대한결핵협회 기부협약으로 진행된 프로젝트 입니다.
 image: https://res.cloudinary.com/dm7h7e8xj/image/upload/v1559821647/theme2_ylcxxz.jpg
 optimized_image: https://res.cloudinary.com/dm7h7e8xj/image/upload/c_scale,w_380/v1559821647/theme2_ylcxxz.jpg
-category: css
+category: app
 tags:
   - Dong-A Socio Holdings
   - app
