--- a/_posts/2019-11-06-kidkuck.md
+++ b/_posts/2019-11-06-kidkuck.md
@@ -4,8 +4,8 @@ layout: post
 title: Kid키득
 subtitle: App 구축
 description: DA인포메이션에서 무료 배포 성장기록 App을 만들었습니다.
-image: https://res.cloudinary.com/dm7h7e8xj/image/upload/v1559822137/theme11_vei7iw.jpg
-optimized_image: https://res.cloudinary.com/dm7h7e8xj/image/upload/c_scale,w_380/v1559822137/theme11_vei7iw.jpg
+image: /assets/img/top/top-kidkiduck.jpg
+optimized_image: /assets/img/sumnail/sumnail-kidkiduck.jpg
 category: app
 tags:
   - Dong-A Socio Group
