--- a/_posts/2019-06-07-zarada.md
+++ b/_posts/2019-06-07-zarada.md
@@ -4,8 +4,8 @@ layout: post
 title: ZARADA
 subtitle: App 구축
 description: 동아ST 전문의약품인 그로트로핀을 투약하는 환우의 부모를 위한 App입니다.
-image: https://res.cloudinary.com/dm7h7e8xj/image/upload/v1559821648/theme1_eoyjtl.jpg
-optimized_image: https://res.cloudinary.com/dm7h7e8xj/image/upload/c_scale,w_380/v1559821648/theme1_eoyjtl.jpg
+image: /assets/img/top/top-zarada.jpg
+optimized_image: /assets/img/sumnail/sumnail-zarada.jpg
 category: app
 tags:
   - Dong-A ST
