--- a/_posts/2018-06-06-dainfo.md
+++ b/_posts/2018-06-06-dainfo.md
@@ -4,8 +4,8 @@ layout: post
 title: DA인포메이션
 subtitle: 홈페이지 반응형 리뉴얼 구축
 description: 동아쏘시오그룹 IT계열사인 DA인포메이션의 홈페이지 리뉴얼입니다.
-image: https://res.cloudinary.com/dm7h7e8xj/image/upload/v1559825288/theme17_nlndhx.jpg
-optimized_image: https://res.cloudinary.com/dm7h7e8xj/image/upload/c_scale,w_380/v1559825288/theme17_nlndhx.jpg
+image: /assets/img/top/top-dainfo.jpg
+optimized_image: /assets/img/sumnail/sumnail-dainfo.jpg
 category: web
 tags:
   - Dong-A Socio Group
