--- a/_posts/2018-06-02-myvlar.md
+++ b/_posts/2018-06-02-myvlar.md
@@ -4,8 +4,8 @@ layout: post
 title: 마이보라
 subtitle: 홈페이지 반응형 구축
 description: 동아제약 피임약 브랜드 마이보라 홈페이지를 신규 구축했었습니다.
-image: https://res.cloudinary.com/dm7h7e8xj/image/upload/v1559824575/theme14_gi2ypv.jpg
-optimized_image: https://res.cloudinary.com/dm7h7e8xj/image/upload/c_scale,w_380/v1559824575/theme14_gi2ypv.jpg
+image: /assets/img/top/top-myvlar.jpg
+optimized_image: /assets/img/sumnail/sumnail-myvlar.jpg
 category: web
 tags:
   - Dong-A Pharm
