--- a/_posts/2018-02-01-stpharm.md
+++ b/_posts/2018-02-01-stpharm.md
@@ -4,8 +4,8 @@ layout: post
 title: ST Pharm
 subtitle: 홈페이지 반응형 리뉴얼 구축
 description: 동아쏘시오그룹의 의약원료 기업 ST Pharm의 홈페이지 리뉴얼 프로젝트 입니다.
-image: https://res.cloudinary.com/dm7h7e8xj/image/upload/v1559824306/theme13_dshbqx.jpg
-optimized_image: https://res.cloudinary.com/dm7h7e8xj/image/upload/c_scale,w_380/v1559824306/theme13_dshbqx.jpg
+image: /assets/img/top/top-stpharm.jpg
+optimized_image: /assets/img/sumnail/sumnail-stpharm.jpg
 category: web
 tags:
   - Dong-A Socio Group
