--- a/_posts/2017-08-11-nsi.md
+++ b/_posts/2017-08-11-nsi.md
@@ -4,8 +4,8 @@ layout: post
 title: NS Investment
 subtitle: 홈페이지 반응형 신규 구축
 description: 동아쏘시오그룹의 투자전문 계열사 NS INVESTMENT 신규 홈페이지 구축 프로젝트 입니다.
-image: https://res.cloudinary.com/dm7h7e8xj/image/upload/v1559822138/theme10_xenudc.jpg
-optimized_image: https://res.cloudinary.com/dm7h7e8xj/image/upload/c_scale,w_380/v1559822138/theme10_xenudc.jpg
+image: /assets/img/top/top-nsi.jpg
+optimized_image: /assets/img/sumnail/sumnail-nsi.jpg
 category: web
 tags:
   - Dong-A Socio Group
