--- a/_posts/2017-06-10-share-me.md
+++ b/_posts/2017-06-10-share-me.md
@@ -4,8 +4,8 @@ layout: post
 title: 대한결핵협회
 subtitle: App 구축
 description: 동아쏘시오그룹과 대한결핵협회 기부협약으로 진행된 프로젝트 입니다.
-image: https://res.cloudinary.com/dm7h7e8xj/image/upload/v1559821647/theme2_ylcxxz.jpg
-optimized_image: https://res.cloudinary.com/dm7h7e8xj/image/upload/c_scale,w_380/v1559821647/theme2_ylcxxz.jpg
+image: /assets/img/top/top-shareme.jpg
+optimized_image: /assets/img/sumnail/sumnail-shareme.jpg
 category: app
 tags:
   - Dong-A Socio Holdings
