--- a/_posts/2017-02-08-pharm-ccm.md
+++ b/_posts/2017-02-08-pharm-ccm.md
@@ -4,8 +4,8 @@ layout: post
 title: 동아제약 CCM
 subtitle: 홈페이지 신규 구축
 description: 동아제약 CCM 내부 홈페이지 프로젝트 입니다.
-image: https://res.cloudinary.com/dm7h7e8xj/image/upload/v1559821648/theme8_knvabs.jpg
-optimized_image: https://res.cloudinary.com/dm7h7e8xj/image/upload/c_scale,w_380/v1559821648/theme8_knvabs.jpg
+image: /assets/img/top/top-pharmccm.jpg
+optimized_image: /assets/img/sumnail/sumnail-pharmccm.jpg
 category: web
 tags:
   - Dong-A Pharm
