--- a/_posts/2015-12-07-ui-video.md
+++ b/_posts/2015-12-07-ui-video.md
@@ -4,8 +4,8 @@ layout: post
 title: UI 홍보영상
 subtitle: promotion Video
 description: UI 홍보영상입니다. 홍보 및 동작설명 관련 내용입니다.
-image: https://res.cloudinary.com/dm7h7e8xj/image/upload/v1559825145/theme16_o0seet.jpg
-optimized_image: https://res.cloudinary.com/dm7h7e8xj/image/upload/c_scale,w_380/v1559825145/theme16_o0seet.jpg
+image: /assets/img/top/top-ui.jpg
+optimized_image: /assets/img/sumnail/sumnail-ui.jpg
 category: video
 tags:
   - UI
