--- a/_posts/0000-00-00-intro.md
+++ b/_posts/0000-00-00-intro.md
@@ -2,7 +2,7 @@
 date: 2022-01-20 12:26:40
 layout: post
 title: Welcome to my portfolio site
-subtitle: 'I will keep my head cold and my heart hot.'
+subtitle: 'I will keep my head cold and my heart hot. Please look at my work.'
 description: >-
   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
   tempor incididunt ut labore et dolore magna aliqua.
