--- a/_posts/0000-00-00-intro.md
+++ b/_posts/0000-00-00-intro.md
@@ -10,7 +10,7 @@ optimized_image: >-
   /assets/img/sumnail/sumnail-intro.jpg
 category: blog
 tags:
-author: thiagorossener
+author: Sang-hyun Lee
 paginate: true
 ---
 
