--- a/_posts/0000-00-00-intro.md
+++ b/_posts/0000-00-00-intro.md
@@ -8,7 +8,7 @@ image: >-
   /assets/img/top/top-intro.jpg
 optimized_image: >-
   /assets/img/sumnail/sumnail-intro.jpg
-category: blog
+category: 
 tags:
 author: Sang-hyun Lee
 ---
