--- a/_posts/2015-12-07-ui-video.md
+++ b/_posts/2015-12-07-ui-video.md
@@ -9,9 +9,8 @@ optimized_image: /assets/img/sumnail/sumnail-ui.jpg
 category: video
 tags:
   - UI
-  - video
-  - design
-author: thiagorossener
+  - Video Design
+author: Sang-hyun Lee
 paginate: true
 ---
 
