--- a/_posts/2016-12-08-st-ccm.md
+++ b/_posts/2016-12-08-st-ccm.md
@@ -9,10 +9,9 @@ optimized_image: /assets/img/sumnail/sumnail-stccm.jpg
 category: web
 tags:
   - Dong-A Pharm
-  - web
-  - design
-  - pc
-author: thiagorossener
+  - Web Design
+  - PC
+author: Sang-hyun Lee
 paginate: true
 ---
 
