--- a/_posts/2018-06-06-dainfo.md
+++ b/_posts/2018-06-06-dainfo.md
@@ -9,12 +9,11 @@ optimized_image: /assets/img/sumnail/sumnail-dainfo.jpg
 category: web
 tags:
   - Dong-A Socio Group
-  - web
-  - design
-  - publising
-  - pc
-  - mobile
-author: thiagorossener
+  - Web Design
+  - Publising
+  - PC
+  - Mobile
+author: Sang-hyun Lee
 paginate: true
 ---
 
