--- a/_posts/2019-11-06-kidkuck.md
+++ b/_posts/2019-11-06-kidkuck.md
@@ -9,10 +9,9 @@ optimized_image: /assets/img/sumnail/sumnail-kidkiduck.jpg
 category: app
 tags:
   - Dong-A Socio Group
-  - app
-  - design
-  - mobile
-author: thiagorossener
+  - App Design
+  - Mobile
+author: Sang-hyun Lee
 paginate: true
 ---
 
