--- a/_posts/2020-04-04-jeongdo.md
+++ b/_posts/2020-04-04-jeongdo.md
@@ -9,11 +9,10 @@ optimized_image: /assets/img/sumnail/sumnail-gamasot.jpg
 category: web
 tags:
   - Dong-A Socio Group
-  - web
-  - design
-  - publising
-  - pc
-author: thiagorossener
+  - Web Design
+  - Publising
+  - PC
+author: Sang-hyun Lee
 paginate: true
 ---
 
