--- a/_posts/2017-06-10-share-me.md
+++ b/_posts/2017-06-10-share-me.md
@@ -9,10 +9,9 @@ optimized_image: /assets/img/sumnail/sumnail-shareme.jpg
 category: app
 tags:
   - Dong-A Socio Holdings
-  - app
-  - design
-  - mobile
-author: thiagorossener
+  - App Design
+  - Mobile
+author: Sang-hyun Lee
 paginate: true
 ---
 
