--- a/_posts/2018-09-03-bacchusd.md
+++ b/_posts/2018-09-03-bacchusd.md
@@ -9,11 +9,10 @@ optimized_image: /assets/img/sumnail/sumnail-bachussd.jpg
 category: web
 tags:
   - Dong-A Socio Group
-  - web
-  - design
-  - pc
-  - mobile
-author: thiagorossener
+  - Web Design
+  - PC
+  - Mobile
+author: Sang-hyun Lee
 paginate: true
 ---
 
