--- a/_posts/2019-06-07-zarada.md
+++ b/_posts/2019-06-07-zarada.md
@@ -9,10 +9,9 @@ optimized_image: /assets/img/sumnail/sumnail-zarada.jpg
 category: app
 tags:
   - Dong-A ST
-  - app
-  - design
-  - mobile
-author: thiagorossener
+  - App Design
+  - Mobile
+author: Sang-hyun Lee
 paginate: true
 ---
 
