--- a/_posts/2021-11-11-jj.md
+++ b/_posts/2021-11-11-jj.md
@@ -58,10 +58,10 @@ Login / Main / Sub
     <img src="/assets/img/slide/jj01.jpg" />
   </div>
   <div class="bubble">
-    <img src="/assets/img/slide/jj02.jpg" /> 
+    <img src="/assets/img/slide/jj02.JPG" /> 
   </div>
   <div class="bubble">
-    <img src="/assets/img/slide/jj03.jpg" /> 
+    <img src="/assets/img/slide/jj03.JPG" /> 
   </div>
 </section>
 
